--- a/base_model_mesa/minimal_model.ipynb
+++ b/base_model_mesa/minimal_model.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "410baa38-b33a-4d92-8bcf-ca147592ab04",
+   "id": "70059384-7a53-4dcf-a4e8-9331b4cfc6df",
    "metadata": {
     "tags": []
    },
@@ -13,20 +13,40 @@
     "import mesa.time as time\n",
     "import mesa.space as space\n",
     "from mesa.datacollection import DataCollector\n",
+    "\n",
+    "from enum import Enum\n",
     "import pickle\n",
     "import networkx as nx\n",
     "import matplotlib.pyplot as plt\n",
-    "import random\n",
-    "\n",
-    "\n",
+    "import random"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "249366c9-78e8-4f9a-b0b4-d8390729a49e",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
     "class MinimalAgent(Agent):\n",
     "    def __init__(self, unique_id, model):\n",
     "        super().__init__(unique_id, model)\n",
     "\n",
     "    def step(self):\n",
-    "        print(\"Hello world! I am agent: \" + str(self.unique_id) + \" my node id is: \" + str(self.pos))\n",
-    "\n",
-    "\n",
+    "        print(\"Hello world! I am agent: \" + str(self.unique_id) + \" my node id is: \" + str(self.pos))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "02e7e791-733f-46bf-9e29-999d0a5bf0e0",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
     "class MinimalModel(Model):\n",
     "    def __init__(self):\n",
     "        self.schedule = time.RandomActivation(self)\n",
@@ -61,9 +81,19 @@
     "    def step(self):\n",
     "        print(\"This is step: \" + str(self.schedule.steps))\n",
     "        self.schedule.step()\n",
-    "        self.datacollector.collect(self)\n",
-    "\n",
-    "\n",
+    "        self.datacollector.collect(self)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "fe8299e7-9aa3-4f77-9f96-28e2889d8a4a",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "\"\"\" Model metrics\"\"\"\n",
     "def count_agents(self):\n",
     "    return self.num_agents"
    ]
@@ -164,6 +194,9 @@
     }
    ],
    "source": [
+    "\"\"\" Run Model\n",
+    "\"\"\"\n",
+    "\n",
     "model = MinimalModel()\n",
     "for i in range(3):\n",
     "    model.step()\n",
@@ -192,7 +225,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.8.15"
   }
  },
  "nbformat": 4,
