--- a/base_model_mesa/make_network_object.ipynb
+++ b/base_model_mesa/make_network_object.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "id": "31802f56-6e7f-4d77-9ac1-f8ec2026004a",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "id": "8d36ef57-78b1-4c47-bb69-1f231b60ecac",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
    "id": "ebd2a79b-0031-4960-bfae-339314ad0e9e",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 13,
    "id": "912655c6-dd2b-4561-90a3-86a178cb8404",
    "metadata": {},
    "outputs": [],
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
    "id": "b6995836-08f6-4b48-98fc-7849cf8b8b1d",
    "metadata": {},
    "outputs": [],
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 15,
    "id": "2fcefe6e-e97c-4ccb-aa56-7cc1dd6d1d12",
    "metadata": {},
    "outputs": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 16,
    "id": "8ae9a9c6-2c0f-4719-8685-77a2a2134792",
    "metadata": {},
    "outputs": [
@@ -91,7 +91,7 @@
        "EdgeDataView([(1, 2), (1, 5974), (1, 5982), (1, 6006), (2, 3)])"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 17,
    "id": "214d448e-35a3-4352-89e9-2657c55de1b6",
    "metadata": {},
    "outputs": [],
@@ -113,20 +113,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 19,
    "id": "e2dda8fd-9e08-45fa-a4b8-f4d8523489e4",
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "__init__() got an unexpected keyword argument 'height'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn [27], line 64\u001b[0m\n\u001b[0;32m     60\u001b[0m     \u001b[39mprint\u001b[39m(agent_data)\n\u001b[0;32m     63\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39m__name__\u001b[39m \u001b[39m==\u001b[39m \u001b[39m'\u001b[39m\u001b[39m__main__\u001b[39m\u001b[39m'\u001b[39m:\n\u001b[1;32m---> 64\u001b[0m     main()\n",
-      "Cell \u001b[1;32mIn [27], line 52\u001b[0m, in \u001b[0;36mmain\u001b[1;34m()\u001b[0m\n\u001b[0;32m     51\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mmain\u001b[39m():\n\u001b[1;32m---> 52\u001b[0m     model \u001b[39m=\u001b[39m MinimalModel(height\u001b[39m=\u001b[39;49m\u001b[39m20\u001b[39;49m, width\u001b[39m=\u001b[39;49m\u001b[39m20\u001b[39;49m, num_agents\u001b[39m=\u001b[39;49m\u001b[39m3\u001b[39;49m)\n\u001b[0;32m     53\u001b[0m     \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39m3\u001b[39m):\n\u001b[0;32m     54\u001b[0m         model\u001b[39m.\u001b[39mstep()\n",
-      "\u001b[1;31mTypeError\u001b[0m: __init__() got an unexpected keyword argument 'height'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is step: 0\n",
+      "Hello world! I am agent: 6\n",
+      "Hello world! I am agent: 4\n",
+      "Hello world! I am agent: 9\n",
+      "Hello world! I am agent: 7\n",
+      "Hello world! I am agent: 1\n",
+      "Hello world! I am agent: 3\n",
+      "Hello world! I am agent: 0\n",
+      "Hello world! I am agent: 5\n",
+      "Hello world! I am agent: 2\n",
+      "Hello world! I am agent: 8\n",
+      "This is step: 1\n",
+      "Hello world! I am agent: 3\n",
+      "Hello world! I am agent: 4\n",
+      "Hello world! I am agent: 6\n",
+      "Hello world! I am agent: 0\n",
+      "Hello world! I am agent: 1\n",
+      "Hello world! I am agent: 8\n",
+      "Hello world! I am agent: 5\n",
+      "Hello world! I am agent: 2\n",
+      "Hello world! I am agent: 9\n",
+      "Hello world! I am agent: 7\n",
+      "This is step: 2\n",
+      "Hello world! I am agent: 5\n",
+      "Hello world! I am agent: 7\n",
+      "Hello world! I am agent: 6\n",
+      "Hello world! I am agent: 9\n",
+      "Hello world! I am agent: 8\n",
+      "Hello world! I am agent: 3\n",
+      "Hello world! I am agent: 2\n",
+      "Hello world! I am agent: 4\n",
+      "Hello world! I am agent: 1\n",
+      "Hello world! I am agent: 0\n",
+      "   Number of Agents\n",
+      "0                10\n",
+      "1                10\n",
+      "2                10\n",
+      "3                10\n",
+      "              Agent ID\n",
+      "Step AgentID          \n",
+      "0    0               0\n",
+      "     1               1\n",
+      "     2               2\n",
+      "     3               3\n",
+      "     4               4\n",
+      "     5               5\n",
+      "     6               6\n",
+      "     7               7\n",
+      "     8               8\n",
+      "     9               9\n",
+      "1    0               0\n",
+      "     1               1\n",
+      "     2               2\n",
+      "     3               3\n",
+      "     4               4\n",
+      "     5               5\n",
+      "     6               6\n",
+      "     7               7\n",
+      "     8               8\n",
+      "     9               9\n",
+      "2    0               0\n",
+      "     1               1\n",
+      "     2               2\n",
+      "     3               3\n",
+      "     4               4\n",
+      "     5               5\n",
+      "     6               6\n",
+      "     7               7\n",
+      "     8               8\n",
+      "     9               9\n",
+      "3    0               0\n",
+      "     1               1\n",
+      "     2               2\n",
+      "     3               3\n",
+      "     4               4\n",
+      "     5               5\n",
+      "     6               6\n",
+      "     7               7\n",
+      "     8               8\n",
+      "     9               9\n"
      ]
     }
    ],
@@ -136,6 +210,8 @@
     "import mesa.space as space\n",
     "from mesa.datacollection import DataCollector\n",
     "import pickle\n",
+    "import random\n",
+    "\n",
     "\n",
     "\n",
     "class MinimalAgent(Agent):\n",
@@ -149,14 +225,16 @@
     "class MinimalModel(Model):\n",
     "    def __init__(self):\n",
     "        self.schedule = time.RandomActivation(self)\n",
-    "        self.grid = space.NetworkGrid(pickle.load(\"street_network.data\"))\n",
-    "          \n",
+    "        with open('street_network.data', 'rb') as file:\n",
+    "            self.streets = pickle.load(file)\n",
+    "        self.grid = space.NetworkGrid(self.streets)\n",
     "                                      \n",
+    "        self.num_agents = 10\n",
     "\n",
     "        for i in range(self.num_agents):\n",
     "            a = MinimalAgent(i, self)\n",
     "            self.schedule.add(a)\n",
-    "            location = self.grid.find_empty() \n",
+    "            location = random.choice(list(self.streets))\n",
     "            self.grid.place_agent(a, location)\n",
     "\n",
     "        model_metrics = {\n",
