--- a/base_model_mesa/minimal_model.ipynb
+++ b/base_model_mesa/minimal_model.ipynb
@@ -23,7 +23,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
+   "id": "d01b4bbd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "249366c9-78e8-4f9a-b0b4-d8390729a49e",
    "metadata": {
     "tags": []
@@ -33,14 +41,15 @@
     "class MinimalAgent(Agent):\n",
     "    def __init__(self, unique_id, model):\n",
     "        super().__init__(unique_id, model)\n",
+    "        self.color = [random.randrange(0,256,16),random.randrange(0,256,16),random.randrange(0,256,16)]\n",
     "\n",
     "    def step(self):\n",
-    "        print(\"Hello world! I am agent: \" + str(self.unique_id) + \" my node id is: \" + str(self.pos))"
+    "        print(\"Hello world! I am agent: \" + str(self.unique_id) + \" my node id is: \" + str(self.pos) +\"my color is:\"+ str(self.color))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "id": "02e7e791-733f-46bf-9e29-999d0a5bf0e0",
    "metadata": {
     "tags": []
@@ -86,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "fe8299e7-9aa3-4f77-9f96-28e2889d8a4a",
    "metadata": {
     "tags": []
@@ -100,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "id": "71c081e2-b5bb-4fc5-a5c8-c378c0faeb99",
    "metadata": {
     "tags": []
@@ -111,38 +120,38 @@
      "output_type": "stream",
      "text": [
       "This is step: 0\n",
-      "Hello world! I am agent: 9 my node id is: 1448\n",
-      "Hello world! I am agent: 5 my node id is: 5386\n",
-      "Hello world! I am agent: 7 my node id is: 14608\n",
-      "Hello world! I am agent: 8 my node id is: 13543\n",
-      "Hello world! I am agent: 3 my node id is: 984\n",
-      "Hello world! I am agent: 6 my node id is: 14775\n",
-      "Hello world! I am agent: 2 my node id is: 263\n",
-      "Hello world! I am agent: 4 my node id is: 9246\n",
-      "Hello world! I am agent: 0 my node id is: 7092\n",
-      "Hello world! I am agent: 1 my node id is: 13667\n",
+      "Hello world! I am agent: 4 my node id is: 12764\n",
+      "Hello world! I am agent: 0 my node id is: 8938\n",
+      "Hello world! I am agent: 1 my node id is: 8457\n",
+      "Hello world! I am agent: 2 my node id is: 13036\n",
+      "Hello world! I am agent: 9 my node id is: 8711\n",
+      "Hello world! I am agent: 6 my node id is: 14790\n",
+      "Hello world! I am agent: 3 my node id is: 595\n",
+      "Hello world! I am agent: 8 my node id is: 7114\n",
+      "Hello world! I am agent: 7 my node id is: 14016\n",
+      "Hello world! I am agent: 5 my node id is: 140\n",
       "This is step: 1\n",
-      "Hello world! I am agent: 3 my node id is: 984\n",
-      "Hello world! I am agent: 7 my node id is: 14608\n",
-      "Hello world! I am agent: 5 my node id is: 5386\n",
-      "Hello world! I am agent: 2 my node id is: 263\n",
-      "Hello world! I am agent: 4 my node id is: 9246\n",
-      "Hello world! I am agent: 9 my node id is: 1448\n",
-      "Hello world! I am agent: 0 my node id is: 7092\n",
-      "Hello world! I am agent: 1 my node id is: 13667\n",
-      "Hello world! I am agent: 6 my node id is: 14775\n",
-      "Hello world! I am agent: 8 my node id is: 13543\n",
+      "Hello world! I am agent: 8 my node id is: 7114\n",
+      "Hello world! I am agent: 9 my node id is: 8711\n",
+      "Hello world! I am agent: 7 my node id is: 14016\n",
+      "Hello world! I am agent: 0 my node id is: 8938\n",
+      "Hello world! I am agent: 5 my node id is: 140\n",
+      "Hello world! I am agent: 1 my node id is: 8457\n",
+      "Hello world! I am agent: 3 my node id is: 595\n",
+      "Hello world! I am agent: 4 my node id is: 12764\n",
+      "Hello world! I am agent: 6 my node id is: 14790\n",
+      "Hello world! I am agent: 2 my node id is: 13036\n",
       "This is step: 2\n",
-      "Hello world! I am agent: 4 my node id is: 9246\n",
-      "Hello world! I am agent: 9 my node id is: 1448\n",
-      "Hello world! I am agent: 3 my node id is: 984\n",
-      "Hello world! I am agent: 7 my node id is: 14608\n",
-      "Hello world! I am agent: 6 my node id is: 14775\n",
-      "Hello world! I am agent: 0 my node id is: 7092\n",
-      "Hello world! I am agent: 1 my node id is: 13667\n",
-      "Hello world! I am agent: 2 my node id is: 263\n",
-      "Hello world! I am agent: 5 my node id is: 5386\n",
-      "Hello world! I am agent: 8 my node id is: 13543\n",
+      "Hello world! I am agent: 2 my node id is: 13036\n",
+      "Hello world! I am agent: 8 my node id is: 7114\n",
+      "Hello world! I am agent: 7 my node id is: 14016\n",
+      "Hello world! I am agent: 0 my node id is: 8938\n",
+      "Hello world! I am agent: 3 my node id is: 595\n",
+      "Hello world! I am agent: 1 my node id is: 8457\n",
+      "Hello world! I am agent: 6 my node id is: 14790\n",
+      "Hello world! I am agent: 5 my node id is: 140\n",
+      "Hello world! I am agent: 4 my node id is: 12764\n",
+      "Hello world! I am agent: 9 my node id is: 8711\n",
       "   Number of Agents\n",
       "0                10\n",
       "1                10\n",
@@ -201,6 +210,9 @@
     "for i in range(3):\n",
     "    model.step()\n",
     "\n",
+    "\n",
+    "\n",
+    "\n",
     "# Get the Pandas Dataframe from the model, by using the table name we defined in the model\n",
     "model_data = model.datacollector.get_model_vars_dataframe()\n",
     "agent_data = model.datacollector.get_agent_vars_dataframe()\n",
@@ -211,7 +223,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.8.15 ('SEN1121')",
    "language": "python",
    "name": "python3"
   },
@@ -226,6 +238,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.15"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "e2fd2631c7b47c37dc6bffb9af1c3fc56da6c8e4c0a3d879adc1ef73c6a6ec07"
+   }
   }
  },
  "nbformat": 4,
