--- a/base_model_mesa/make_network_object.ipynb
+++ b/base_model_mesa/make_network_object.ipynb
@@ -2,66 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "id": "31802f56-6e7f-4d77-9ac1-f8ec2026004a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import networkx as nx\n",
-    "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "import pickle\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "8d36ef57-78b1-4c47-bb69-1f231b60ecac",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data = pd.read_csv('coord_full.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "ebd2a79b-0031-4960-bfae-339314ad0e9e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pos = pd.read_csv('nodes_data.csv')\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "912655c6-dd2b-4561-90a3-86a178cb8404",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "G = nx.from_pandas_edgelist(data, source = \"JointI\", target = \"JointJ\", create_using=nx.Graph, edge_attr = True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "b6995836-08f6-4b48-98fc-7849cf8b8b1d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "positions = {}\n",
-    "for n in G:\n",
-    "    row = pos[pos[\"node\"] == n ]\n",
-    "    positions[n]= (float(row['x']),float(row['y']))\n",
-    "    \n",
-    "nx.set_node_attributes(G,positions,\"pos\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "2fcefe6e-e97c-4ccb-aa56-7cc1dd6d1d12",
    "metadata": {},
    "outputs": [
     {
@@ -76,33 +18,53 @@
     }
    ],
    "source": [
+    "import networkx as nx\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import pickle\n",
+    "\n",
+    "data = pd.read_csv('coord_full.csv')\n",
+    "pos = pd.read_csv('nodes_data.csv')\n",
+    "\n",
+    "G = nx.from_pandas_edgelist(data, source = \"JointI\", target = \"JointJ\", create_using=nx.Graph, edge_attr = True)\n",
+    "positions = {}\n",
+    "for n in G:\n",
+    "    row = pos[pos[\"node\"] == n ]\n",
+    "    positions[n]= (float(row['x']),float(row['y']))\n",
+    "    \n",
+    "nx.set_node_attributes(G,positions,\"pos\")\n",
     "nx.draw_networkx(G, pos= positions, with_labels = False,node_size = 1 )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "id": "8ae9a9c6-2c0f-4719-8685-77a2a2134792",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "EdgeDataView([(1, 2), (1, 5974), (1, 5982), (1, 6006), (2, 3)])"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'networkx.classes.reportviews.NodeView'>\n"
+     ]
     }
    ],
    "source": [
-    "G.edges((1, 2))"
+    "G.edges((1, 2))\n",
+    "\n",
+    "print(type(G.nodes))\n",
+    "\n",
+    "positions = {}\n",
+    "n=0\n",
+    "for n in G:\n",
+    "    row = pos[pos[\"node\"] == n ]\n",
+    "    positions[n]= (float(row['x']),float(row['y']))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "id": "214d448e-35a3-4352-89e9-2657c55de1b6",
    "metadata": {},
    "outputs": [],
@@ -113,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "id": "e2dda8fd-9e08-45fa-a4b8-f4d8523489e4",
    "metadata": {},
    "outputs": [
@@ -122,38 +84,38 @@
      "output_type": "stream",
      "text": [
       "This is step: 0\n",
-      "Hello world! I am agent: 6\n",
-      "Hello world! I am agent: 4\n",
-      "Hello world! I am agent: 9\n",
-      "Hello world! I am agent: 7\n",
-      "Hello world! I am agent: 1\n",
-      "Hello world! I am agent: 3\n",
-      "Hello world! I am agent: 0\n",
       "Hello world! I am agent: 5\n",
+      "Hello world! I am agent: 0\n",
+      "Hello world! I am agent: 3\n",
+      "Hello world! I am agent: 1\n",
       "Hello world! I am agent: 2\n",
       "Hello world! I am agent: 8\n",
+      "Hello world! I am agent: 7\n",
+      "Hello world! I am agent: 9\n",
+      "Hello world! I am agent: 4\n",
+      "Hello world! I am agent: 6\n",
       "This is step: 1\n",
-      "Hello world! I am agent: 3\n",
+      "Hello world! I am agent: 1\n",
+      "Hello world! I am agent: 7\n",
+      "Hello world! I am agent: 9\n",
+      "Hello world! I am agent: 2\n",
       "Hello world! I am agent: 4\n",
       "Hello world! I am agent: 6\n",
-      "Hello world! I am agent: 0\n",
-      "Hello world! I am agent: 1\n",
-      "Hello world! I am agent: 8\n",
       "Hello world! I am agent: 5\n",
-      "Hello world! I am agent: 2\n",
-      "Hello world! I am agent: 9\n",
-      "Hello world! I am agent: 7\n",
+      "Hello world! I am agent: 3\n",
+      "Hello world! I am agent: 8\n",
+      "Hello world! I am agent: 0\n",
       "This is step: 2\n",
+      "Hello world! I am agent: 9\n",
+      "Hello world! I am agent: 3\n",
+      "Hello world! I am agent: 1\n",
+      "Hello world! I am agent: 2\n",
+      "Hello world! I am agent: 8\n",
+      "Hello world! I am agent: 4\n",
+      "Hello world! I am agent: 0\n",
+      "Hello world! I am agent: 6\n",
       "Hello world! I am agent: 5\n",
       "Hello world! I am agent: 7\n",
-      "Hello world! I am agent: 6\n",
-      "Hello world! I am agent: 9\n",
-      "Hello world! I am agent: 8\n",
-      "Hello world! I am agent: 3\n",
-      "Hello world! I am agent: 2\n",
-      "Hello world! I am agent: 4\n",
-      "Hello world! I am agent: 1\n",
-      "Hello world! I am agent: 0\n",
       "   Number of Agents\n",
       "0                10\n",
       "1                10\n",
