added citizen class

--- a/base_model_mesa/rich_model/test_model.ipynb
+++ b/base_model_mesa/rich_model/test_model.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "70059384-7a53-4dcf-a4e8-9331b4cfc6df",
    "metadata": {
     "tags": []
@@ -89,36 +89,36 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1937\n",
-      "2632\n",
-      "2676\n",
-      "8677\n",
-      "14302\n",
-      "9226\n",
-      "13084\n",
-      "6422\n",
-      "13068\n",
-      "7989\n",
-      "#e0a010\n",
-      "1937\n",
-      "#10b060\n",
-      "2632\n",
-      "#806030\n",
-      "2676\n",
-      "#509070\n",
-      "8677\n",
-      "#9080e0\n",
-      "14302\n",
-      "#e070e0\n",
-      "9226\n",
-      "#904060\n",
-      "13084\n",
-      "#602070\n",
-      "6422\n",
-      "#70b090\n",
-      "13068\n",
-      "#707050\n",
-      "7989\n"
+      "5131\n",
+      "12868\n",
+      "8960\n",
+      "337\n",
+      "6966\n",
+      "6401\n",
+      "14260\n",
+      "6130\n",
+      "1073\n",
+      "3557\n",
+      "#50c030\n",
+      "5131\n",
+      "#50a0a0\n",
+      "12868\n",
+      "#c0d0b0\n",
+      "8960\n",
+      "#5070d0\n",
+      "337\n",
+      "#40c020\n",
+      "6966\n",
+      "#301080\n",
+      "6401\n",
+      "#b04060\n",
+      "14260\n",
+      "#2040e0\n",
+      "6130\n",
+      "#f0c070\n",
+      "1073\n",
+      "#50a030\n",
+      "3557\n"
      ]
     }
    ],
@@ -143,73 +143,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "This is step: 3\n",
-      "Hello world! I am agent: 200005\n",
-      " my node id is: 9226\n",
-      " my color is: #e070e0\n",
-      "Hello world! I am agent: 200002\n",
-      " my node id is: 2676\n",
-      " my color is: #806030\n",
-      "Hello world! I am agent: 100008\n",
-      " my node id is: 13068\n",
-      " my color is: #500040\n",
-      "Hello world! I am agent: 100009\n",
-      " my node id is: 7989\n",
-      " my color is: #902050\n",
-      "Hello world! I am agent: 100007\n",
-      " my node id is: 6422\n",
-      " my color is: #a070b0\n",
-      "Hello world! I am agent: 100006\n",
-      " my node id is: 13084\n",
-      " my color is: #703060\n",
-      "Hello world! I am agent: 200004\n",
-      " my node id is: 14302\n",
-      " my color is: #9080e0\n",
-      "Hello world! I am agent: 200008\n",
-      " my node id is: 13068\n",
-      " my color is: #70b090\n",
-      "Hello world! I am agent: 200001\n",
-      " my node id is: 2632\n",
-      " my color is: #10b060\n",
-      "Hello world! I am agent: 100000\n",
-      " my node id is: 1937\n",
-      " my color is: #e0b000\n",
-      "Hello world! I am agent: 100002\n",
-      " my node id is: 2676\n",
-      " my color is: #603060\n",
       "Hello world! I am agent: 100005\n",
-      " my node id is: 9226\n",
-      " my color is: #802090\n",
-      "Hello world! I am agent: 100004\n",
-      " my node id is: 14302\n",
-      " my color is: #80c050\n",
+      " my node id is: 6401\n",
+      " my color is: #506000\n",
       "Hello world! I am agent: 200009\n",
-      " my node id is: 7989\n",
-      " my color is: #707050\n",
+      " my node id is: 3557\n",
+      " my color is: #50a030\n",
+      "Hello world! I am agent: 100007\n",
+      " my node id is: 6130\n",
+      " my color is: #a0d070\n",
+      "Hello world! I am agent: 200008\n",
+      " my node id is: 1073\n",
+      " my color is: #f0c070\n",
+      "Hello world! I am agent: 100006\n",
+      " my node id is: 14260\n",
+      " my color is: #80e0a0\n",
       "Hello world! I am agent: 200007\n",
-      " my node id is: 6422\n",
-      " my color is: #602070\n",
-      "Hello world! I am agent: 200006\n",
-      " my node id is: 13084\n",
-      " my color is: #904060\n",
-      "Hello world! I am agent: 100003\n",
-      " my node id is: 8677\n",
-      " my color is: #d080f0\n",
+      " my node id is: 6130\n",
+      " my color is: #2040e0\n",
+      "Hello world! I am agent: 100004\n",
+      " my node id is: 6966\n",
+      " my color is: #80c070\n",
+      "Hello world! I am agent: 100008\n",
+      " my node id is: 1073\n",
+      " my color is: #50b010\n",
       "Hello world! I am agent: 200000\n",
-      " my node id is: 1937\n",
-      " my color is: #e0a010\n",
+      " my node id is: 5131\n",
+      " my color is: #50c030\n",
+      "Hello world! I am agent: 200005\n",
+      " my node id is: 6401\n",
+      " my color is: #301080\n",
+      "Hello world! I am agent: 200004\n",
+      " my node id is: 6966\n",
+      " my color is: #40c020\n",
+      "Hello world! I am agent: 100009\n",
+      " my node id is: 3557\n",
+      " my color is: #a0e0e0\n",
+      "Hello world! I am agent: 100003\n",
+      " my node id is: 337\n",
+      " my color is: #907000\n",
       "Hello world! I am agent: 200003\n",
-      " my node id is: 8677\n",
-      " my color is: #509070\n",
+      " my node id is: 337\n",
+      " my color is: #5070d0\n",
+      "Hello world! I am agent: 100000\n",
+      " my node id is: 5131\n",
+      " my color is: #b0b0f0\n",
+      "Hello world! I am agent: 200001\n",
+      " my node id is: 12868\n",
+      " my color is: #50a0a0\n",
+      "Hello world! I am agent: 200002\n",
+      " my node id is: 8960\n",
+      " my color is: #c0d0b0\n",
       "Hello world! I am agent: 100001\n",
-      " my node id is: 2632\n",
-      " my color is: #b0e060\n",
+      " my node id is: 12868\n",
+      " my color is: #70c0e0\n",
+      "Hello world! I am agent: 200006\n",
+      " my node id is: 14260\n",
+      " my color is: #b04060\n",
+      "Hello world! I am agent: 100002\n",
+      " my node id is: 8960\n",
+      " my color is: #c0a0a0\n",
       "   Number of Agents\n",
       "0                10\n",
       "1                10\n",
@@ -218,17 +218,17 @@
       "4                10\n",
       "              Agent ID Agent Colour                         family\n",
       "Step AgentID                                                      \n",
-      "0    100000     100000      #e0b000  <class 'agents.MinimalAgent'>\n",
-      "     100001     100001      #b0e060  <class 'agents.MinimalAgent'>\n",
-      "     100002     100002      #603060  <class 'agents.MinimalAgent'>\n",
-      "     100003     100003      #d080f0  <class 'agents.MinimalAgent'>\n",
-      "     100004     100004      #80c050  <class 'agents.MinimalAgent'>\n",
+      "0    100000     100000      #b0b0f0  <class 'agents.MinimalAgent'>\n",
+      "     100001     100001      #70c0e0  <class 'agents.MinimalAgent'>\n",
+      "     100002     100002      #c0a0a0  <class 'agents.MinimalAgent'>\n",
+      "     100003     100003      #907000  <class 'agents.MinimalAgent'>\n",
+      "     100004     100004      #80c070  <class 'agents.MinimalAgent'>\n",
       "...                ...          ...                            ...\n",
-      "4    200005     200005      #e070e0     <class 'agents.Buildings'>\n",
-      "     200006     200006      #904060     <class 'agents.Buildings'>\n",
-      "     200007     200007      #602070     <class 'agents.Buildings'>\n",
-      "     200008     200008      #70b090     <class 'agents.Buildings'>\n",
-      "     200009     200009      #707050     <class 'agents.Buildings'>\n",
+      "4    200005     200005      #301080     <class 'agents.Buildings'>\n",
+      "     200006     200006      #b04060     <class 'agents.Buildings'>\n",
+      "     200007     200007      #2040e0     <class 'agents.Buildings'>\n",
+      "     200008     200008      #f0c070     <class 'agents.Buildings'>\n",
+      "     200009     200009      #50a030     <class 'agents.Buildings'>\n",
       "\n",
       "[100 rows x 3 columns]\n"
      ]
@@ -242,7 +242,108 @@
     "print(model_data)\n",
     "print(agent_data)\n",
     "\n",
-    "datadump = pandas.DataFrame.from_dict(model.G._node, orient= \"index\")"
+    "graph = model.G\n",
+    "\n",
+    "datadump = pandas.DataFrame.from_dict(model.G._node, orient=\"index\")"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello world! I am agent: 100000\n",
+      " my node id is: 5131\n",
+      " my color is: #b0b0f0\n",
+      "None\n",
+      "Hello world! I am agent: 100001\n",
+      " my node id is: 12868\n",
+      " my color is: #70c0e0\n",
+      "None\n",
+      "Hello world! I am agent: 100002\n",
+      " my node id is: 8960\n",
+      " my color is: #c0a0a0\n",
+      "None\n",
+      "Hello world! I am agent: 100003\n",
+      " my node id is: 337\n",
+      " my color is: #907000\n",
+      "None\n",
+      "Hello world! I am agent: 100004\n",
+      " my node id is: 6966\n",
+      " my color is: #80c070\n",
+      "None\n",
+      "Hello world! I am agent: 100005\n",
+      " my node id is: 6401\n",
+      " my color is: #506000\n",
+      "None\n",
+      "Hello world! I am agent: 100006\n",
+      " my node id is: 14260\n",
+      " my color is: #80e0a0\n",
+      "None\n",
+      "Hello world! I am agent: 100007\n",
+      " my node id is: 6130\n",
+      " my color is: #a0d070\n",
+      "None\n",
+      "Hello world! I am agent: 100008\n",
+      " my node id is: 1073\n",
+      " my color is: #50b010\n",
+      "None\n",
+      "Hello world! I am agent: 100009\n",
+      " my node id is: 3557\n",
+      " my color is: #a0e0e0\n",
+      "None\n",
+      "Hello world! I am agent: 200000\n",
+      " my node id is: 5131\n",
+      " my color is: #50c030\n",
+      "None\n",
+      "Hello world! I am agent: 200001\n",
+      " my node id is: 12868\n",
+      " my color is: #50a0a0\n",
+      "None\n",
+      "Hello world! I am agent: 200002\n",
+      " my node id is: 8960\n",
+      " my color is: #c0d0b0\n",
+      "None\n",
+      "Hello world! I am agent: 200003\n",
+      " my node id is: 337\n",
+      " my color is: #5070d0\n",
+      "None\n",
+      "Hello world! I am agent: 200004\n",
+      " my node id is: 6966\n",
+      " my color is: #40c020\n",
+      "None\n",
+      "Hello world! I am agent: 200005\n",
+      " my node id is: 6401\n",
+      " my color is: #301080\n",
+      "None\n",
+      "Hello world! I am agent: 200006\n",
+      " my node id is: 14260\n",
+      " my color is: #b04060\n",
+      "None\n",
+      "Hello world! I am agent: 200007\n",
+      " my node id is: 6130\n",
+      " my color is: #2040e0\n",
+      "None\n",
+      "Hello world! I am agent: 200008\n",
+      " my node id is: 1073\n",
+      " my color is: #f0c070\n",
+      "None\n",
+      "Hello world! I am agent: 200009\n",
+      " my node id is: 3557\n",
+      " my color is: #50a030\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "for a in model.schedule.agent_buffer():\n",
+    "    print(a.step())"
    ],
    "metadata": {
     "collapsed": false
