--- a/base_model_mesa/rich_model/test_model.ipynb
+++ b/base_model_mesa/rich_model/test_model.ipynb
@@ -89,36 +89,36 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5131\n",
-      "12868\n",
-      "8960\n",
-      "337\n",
-      "6966\n",
-      "6401\n",
-      "14260\n",
-      "6130\n",
-      "1073\n",
-      "3557\n",
-      "#50c030\n",
-      "5131\n",
-      "#50a0a0\n",
-      "12868\n",
-      "#c0d0b0\n",
-      "8960\n",
-      "#5070d0\n",
-      "337\n",
-      "#40c020\n",
-      "6966\n",
-      "#301080\n",
-      "6401\n",
-      "#b04060\n",
-      "14260\n",
-      "#2040e0\n",
-      "6130\n",
-      "#f0c070\n",
-      "1073\n",
-      "#50a030\n",
-      "3557\n"
+      "1723\n",
+      "3784\n",
+      "427\n",
+      "13348\n",
+      "3073\n",
+      "14631\n",
+      "12114\n",
+      "11178\n",
+      "4555\n",
+      "5132\n",
+      "#4050b0\n",
+      "1723\n",
+      "#60f0b0\n",
+      "3784\n",
+      "#d060b0\n",
+      "427\n",
+      "#e0e0b0\n",
+      "13348\n",
+      "#d0e0c0\n",
+      "3073\n",
+      "#b05020\n",
+      "14631\n",
+      "#50c060\n",
+      "12114\n",
+      "#008020\n",
+      "11178\n",
+      "#7000d0\n",
+      "4555\n",
+      "#d08010\n",
+      "5132\n"
      ]
     }
    ],
@@ -143,94 +143,118 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "This is step: 3\n",
-      "Hello world! I am agent: 100005\n",
-      " my node id is: 6401\n",
-      " my color is: #506000\n",
-      "Hello world! I am agent: 200009\n",
-      " my node id is: 3557\n",
-      " my color is: #50a030\n",
+      "This is step: 0\n",
       "Hello world! I am agent: 100007\n",
-      " my node id is: 6130\n",
-      " my color is: #a0d070\n",
-      "Hello world! I am agent: 200008\n",
-      " my node id is: 1073\n",
-      " my color is: #f0c070\n",
-      "Hello world! I am agent: 100006\n",
-      " my node id is: 14260\n",
-      " my color is: #80e0a0\n",
-      "Hello world! I am agent: 200007\n",
-      " my node id is: 6130\n",
-      " my color is: #2040e0\n",
-      "Hello world! I am agent: 100004\n",
-      " my node id is: 6966\n",
-      " my color is: #80c070\n",
-      "Hello world! I am agent: 100008\n",
-      " my node id is: 1073\n",
-      " my color is: #50b010\n",
-      "Hello world! I am agent: 200000\n",
-      " my node id is: 5131\n",
-      " my color is: #50c030\n",
-      "Hello world! I am agent: 200005\n",
-      " my node id is: 6401\n",
-      " my color is: #301080\n",
-      "Hello world! I am agent: 200004\n",
-      " my node id is: 6966\n",
-      " my color is: #40c020\n",
-      "Hello world! I am agent: 100009\n",
-      " my node id is: 3557\n",
-      " my color is: #a0e0e0\n",
-      "Hello world! I am agent: 100003\n",
-      " my node id is: 337\n",
-      " my color is: #907000\n",
-      "Hello world! I am agent: 200003\n",
-      " my node id is: 337\n",
-      " my color is: #5070d0\n",
+      " my node id is: 11178\n",
+      " my color is: #e070c0\n",
       "Hello world! I am agent: 100000\n",
-      " my node id is: 5131\n",
-      " my color is: #b0b0f0\n",
-      "Hello world! I am agent: 200001\n",
-      " my node id is: 12868\n",
-      " my color is: #50a0a0\n",
-      "Hello world! I am agent: 200002\n",
-      " my node id is: 8960\n",
-      " my color is: #c0d0b0\n",
-      "Hello world! I am agent: 100001\n",
-      " my node id is: 12868\n",
-      " my color is: #70c0e0\n",
-      "Hello world! I am agent: 200006\n",
-      " my node id is: 14260\n",
-      " my color is: #b04060\n",
+      " my node id is: 1723\n",
+      " my color is: #c0a0b0\n",
+      "Hello world! I am agent: 100005\n",
+      " my node id is: 14631\n",
+      " my color is: #60e040\n",
+      "Hello world! I am agent: 200008\n",
+      " my node id is: 4555\n",
+      " my color is: #7000d0\n",
+      "Hello world! I am agent: 100004\n",
+      " my node id is: 3073\n",
+      " my color is: #f080d0\n",
+      "Hello world! I am agent: 200003\n",
+      " my node id is: 13348\n",
+      " my color is: #e0e0b0\n",
       "Hello world! I am agent: 100002\n",
-      " my node id is: 8960\n",
-      " my color is: #c0a0a0\n",
+      " my node id is: 427\n",
+      " my color is: #300030\n",
+      "Hello world! I am agent: 200006\n",
+      " my node id is: 12114\n",
+      " my color is: #50c060\n",
+      "Hello world! I am agent: 200009\n",
+      " my node id is: 5132\n",
+      " my color is: #d08010\n",
+      "Hello world! I am agent: 100001\n",
+      " my node id is: 3784\n",
+      " my color is: #50f010\n",
+      "Hello world! I am agent: 100008\n",
+      " my node id is: 4555\n",
+      " my color is: #00d0f0\n",
+      "Hello world! I am agent: 100003\n",
+      " my node id is: 13348\n",
+      " my color is: #f090a0\n",
+      "Hello world! I am agent: 200000\n",
+      " my node id is: 1723\n",
+      " my color is: #4050b0\n",
+      "Hello world! I am agent: 200005\n",
+      " my node id is: 14631\n",
+      " my color is: #b05020\n",
+      "Hello world! I am agent: 100006\n",
+      " my node id is: 12114\n",
+      " my color is: #b06000\n",
+      "Hello world! I am agent: 200001\n",
+      " my node id is: 3784\n",
+      " my color is: #60f0b0\n",
+      "Hello world! I am agent: 200004\n",
+      " my node id is: 3073\n",
+      " my color is: #d0e0c0\n",
+      "Hello world! I am agent: 200007\n",
+      " my node id is: 11178\n",
+      " my color is: #008020\n",
+      "Hello world! I am agent: 200002\n",
+      " my node id is: 427\n",
+      " my color is: #d060b0\n",
+      "Hello world! I am agent: 100009\n",
+      " my node id is: 5132\n",
+      " my color is: #900030\n",
       "   Number of Agents\n",
       "0                10\n",
       "1                10\n",
-      "2                10\n",
-      "3                10\n",
-      "4                10\n",
       "              Agent ID Agent Colour                         family\n",
       "Step AgentID                                                      \n",
-      "0    100000     100000      #b0b0f0  <class 'agents.MinimalAgent'>\n",
-      "     100001     100001      #70c0e0  <class 'agents.MinimalAgent'>\n",
-      "     100002     100002      #c0a0a0  <class 'agents.MinimalAgent'>\n",
-      "     100003     100003      #907000  <class 'agents.MinimalAgent'>\n",
-      "     100004     100004      #80c070  <class 'agents.MinimalAgent'>\n",
-      "...                ...          ...                            ...\n",
-      "4    200005     200005      #301080     <class 'agents.Buildings'>\n",
-      "     200006     200006      #b04060     <class 'agents.Buildings'>\n",
-      "     200007     200007      #2040e0     <class 'agents.Buildings'>\n",
-      "     200008     200008      #f0c070     <class 'agents.Buildings'>\n",
-      "     200009     200009      #50a030     <class 'agents.Buildings'>\n",
-      "\n",
-      "[100 rows x 3 columns]\n"
+      "0    100000     100000      #c0a0b0  <class 'agents.MinimalAgent'>\n",
+      "     100001     100001      #50f010  <class 'agents.MinimalAgent'>\n",
+      "     100002     100002      #300030  <class 'agents.MinimalAgent'>\n",
+      "     100003     100003      #f090a0  <class 'agents.MinimalAgent'>\n",
+      "     100004     100004      #f080d0  <class 'agents.MinimalAgent'>\n",
+      "     100005     100005      #60e040  <class 'agents.MinimalAgent'>\n",
+      "     100006     100006      #b06000  <class 'agents.MinimalAgent'>\n",
+      "     100007     100007      #e070c0  <class 'agents.MinimalAgent'>\n",
+      "     100008     100008      #00d0f0  <class 'agents.MinimalAgent'>\n",
+      "     100009     100009      #900030  <class 'agents.MinimalAgent'>\n",
+      "     200000     200000      #4050b0     <class 'agents.Buildings'>\n",
+      "     200001     200001      #60f0b0     <class 'agents.Buildings'>\n",
+      "     200002     200002      #d060b0     <class 'agents.Buildings'>\n",
+      "     200003     200003      #e0e0b0     <class 'agents.Buildings'>\n",
+      "     200004     200004      #d0e0c0     <class 'agents.Buildings'>\n",
+      "     200005     200005      #b05020     <class 'agents.Buildings'>\n",
+      "     200006     200006      #50c060     <class 'agents.Buildings'>\n",
+      "     200007     200007      #008020     <class 'agents.Buildings'>\n",
+      "     200008     200008      #7000d0     <class 'agents.Buildings'>\n",
+      "     200009     200009      #d08010     <class 'agents.Buildings'>\n",
+      "1    100000     100000      #c0a0b0  <class 'agents.MinimalAgent'>\n",
+      "     100001     100001      #50f010  <class 'agents.MinimalAgent'>\n",
+      "     100002     100002      #300030  <class 'agents.MinimalAgent'>\n",
+      "     100003     100003      #f090a0  <class 'agents.MinimalAgent'>\n",
+      "     100004     100004      #f080d0  <class 'agents.MinimalAgent'>\n",
+      "     100005     100005      #60e040  <class 'agents.MinimalAgent'>\n",
+      "     100006     100006      #b06000  <class 'agents.MinimalAgent'>\n",
+      "     100007     100007      #e070c0  <class 'agents.MinimalAgent'>\n",
+      "     100008     100008      #00d0f0  <class 'agents.MinimalAgent'>\n",
+      "     100009     100009      #900030  <class 'agents.MinimalAgent'>\n",
+      "     200000     200000      #4050b0     <class 'agents.Buildings'>\n",
+      "     200001     200001      #60f0b0     <class 'agents.Buildings'>\n",
+      "     200002     200002      #d060b0     <class 'agents.Buildings'>\n",
+      "     200003     200003      #e0e0b0     <class 'agents.Buildings'>\n",
+      "     200004     200004      #d0e0c0     <class 'agents.Buildings'>\n",
+      "     200005     200005      #b05020     <class 'agents.Buildings'>\n",
+      "     200006     200006      #50c060     <class 'agents.Buildings'>\n",
+      "     200007     200007      #008020     <class 'agents.Buildings'>\n",
+      "     200008     200008      #7000d0     <class 'agents.Buildings'>\n",
+      "     200009     200009      #d08010     <class 'agents.Buildings'>\n"
      ]
     }
    ],
@@ -252,98 +276,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Hello world! I am agent: 100000\n",
-      " my node id is: 5131\n",
-      " my color is: #b0b0f0\n",
-      "None\n",
+      " my node id is: 1723\n",
+      " my color is: #c0a0b0\n",
       "Hello world! I am agent: 100001\n",
-      " my node id is: 12868\n",
-      " my color is: #70c0e0\n",
-      "None\n",
+      " my node id is: 3784\n",
+      " my color is: #50f010\n",
       "Hello world! I am agent: 100002\n",
-      " my node id is: 8960\n",
-      " my color is: #c0a0a0\n",
-      "None\n",
+      " my node id is: 427\n",
+      " my color is: #300030\n",
       "Hello world! I am agent: 100003\n",
-      " my node id is: 337\n",
-      " my color is: #907000\n",
-      "None\n",
+      " my node id is: 13348\n",
+      " my color is: #f090a0\n",
       "Hello world! I am agent: 100004\n",
-      " my node id is: 6966\n",
-      " my color is: #80c070\n",
-      "None\n",
+      " my node id is: 3073\n",
+      " my color is: #f080d0\n",
       "Hello world! I am agent: 100005\n",
-      " my node id is: 6401\n",
-      " my color is: #506000\n",
-      "None\n",
+      " my node id is: 14631\n",
+      " my color is: #60e040\n",
       "Hello world! I am agent: 100006\n",
-      " my node id is: 14260\n",
-      " my color is: #80e0a0\n",
-      "None\n",
+      " my node id is: 12114\n",
+      " my color is: #b06000\n",
       "Hello world! I am agent: 100007\n",
-      " my node id is: 6130\n",
-      " my color is: #a0d070\n",
-      "None\n",
+      " my node id is: 11178\n",
+      " my color is: #e070c0\n",
       "Hello world! I am agent: 100008\n",
-      " my node id is: 1073\n",
-      " my color is: #50b010\n",
-      "None\n",
+      " my node id is: 4555\n",
+      " my color is: #00d0f0\n",
       "Hello world! I am agent: 100009\n",
-      " my node id is: 3557\n",
-      " my color is: #a0e0e0\n",
-      "None\n",
+      " my node id is: 5132\n",
+      " my color is: #900030\n",
       "Hello world! I am agent: 200000\n",
-      " my node id is: 5131\n",
-      " my color is: #50c030\n",
-      "None\n",
+      " my node id is: 1723\n",
+      " my color is: #4050b0\n",
       "Hello world! I am agent: 200001\n",
-      " my node id is: 12868\n",
-      " my color is: #50a0a0\n",
-      "None\n",
+      " my node id is: 3784\n",
+      " my color is: #60f0b0\n",
       "Hello world! I am agent: 200002\n",
-      " my node id is: 8960\n",
-      " my color is: #c0d0b0\n",
-      "None\n",
+      " my node id is: 427\n",
+      " my color is: #d060b0\n",
       "Hello world! I am agent: 200003\n",
-      " my node id is: 337\n",
-      " my color is: #5070d0\n",
-      "None\n",
+      " my node id is: 13348\n",
+      " my color is: #e0e0b0\n",
       "Hello world! I am agent: 200004\n",
-      " my node id is: 6966\n",
-      " my color is: #40c020\n",
-      "None\n",
+      " my node id is: 3073\n",
+      " my color is: #d0e0c0\n",
       "Hello world! I am agent: 200005\n",
-      " my node id is: 6401\n",
-      " my color is: #301080\n",
-      "None\n",
+      " my node id is: 14631\n",
+      " my color is: #b05020\n",
       "Hello world! I am agent: 200006\n",
-      " my node id is: 14260\n",
-      " my color is: #b04060\n",
-      "None\n",
+      " my node id is: 12114\n",
+      " my color is: #50c060\n",
       "Hello world! I am agent: 200007\n",
-      " my node id is: 6130\n",
-      " my color is: #2040e0\n",
-      "None\n",
+      " my node id is: 11178\n",
+      " my color is: #008020\n",
       "Hello world! I am agent: 200008\n",
-      " my node id is: 1073\n",
-      " my color is: #f0c070\n",
-      "None\n",
+      " my node id is: 4555\n",
+      " my color is: #7000d0\n",
       "Hello world! I am agent: 200009\n",
-      " my node id is: 3557\n",
-      " my color is: #50a030\n",
-      "None\n"
+      " my node id is: 5132\n",
+      " my color is: #d08010\n"
      ]
     }
    ],
    "source": [
     "for a in model.schedule.agent_buffer():\n",
-    "    print(a.step())"
+    "    a.step()"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Create an alternative visualization here using the HoloView library to see the model in real time\n"
    ],
    "metadata": {
     "collapsed": false
