Created a better Agent Generation system

--- a/base_model_mesa/rich_model/test_model.ipynb
+++ b/base_model_mesa/rich_model/test_model.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "id": "70059384-7a53-4dcf-a4e8-9331b4cfc6df",
    "metadata": {
     "tags": []
@@ -53,10 +53,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "outputs": [],
    "source": [
-    "from agents import MinimalAgent, Buildings\n",
+    "from agents import MinimalAgent, Buildings, MobileAgent\n",
     "from model import  MinimalModel"
    ],
    "metadata": {
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "id": "fe8299e7-9aa3-4f77-9f96-28e2889d8a4a",
    "metadata": {
     "tags": []
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "id": "71c081e2-b5bb-4fc5-a5c8-c378c0faeb99",
    "metadata": {
     "tags": []
@@ -89,36 +89,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1723\n",
-      "3784\n",
-      "427\n",
-      "13348\n",
-      "3073\n",
-      "14631\n",
-      "12114\n",
-      "11178\n",
-      "4555\n",
-      "5132\n",
-      "#4050b0\n",
-      "1723\n",
-      "#60f0b0\n",
-      "3784\n",
-      "#d060b0\n",
-      "427\n",
-      "#e0e0b0\n",
-      "13348\n",
-      "#d0e0c0\n",
-      "3073\n",
-      "#b05020\n",
-      "14631\n",
-      "#50c060\n",
-      "12114\n",
-      "#008020\n",
-      "11178\n",
-      "#7000d0\n",
-      "4555\n",
-      "#d08010\n",
-      "5132\n"
+      "4901\n",
+      "12426\n",
+      "11551\n",
+      "11949\n",
+      "9778\n",
+      "#30a080\n",
+      "4901\n",
+      "#20b000\n",
+      "12426\n",
+      "#c0b070\n",
+      "11551\n",
+      "#400040\n",
+      "11949\n",
+      "#b0e0d0\n",
+      "9778\n"
      ]
     }
    ],
@@ -143,118 +128,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "This is step: 0\n",
-      "Hello world! I am agent: 100007\n",
-      " my node id is: 11178\n",
-      " my color is: #e070c0\n",
-      "Hello world! I am agent: 100000\n",
-      " my node id is: 1723\n",
-      " my color is: #c0a0b0\n",
-      "Hello world! I am agent: 100005\n",
-      " my node id is: 14631\n",
-      " my color is: #60e040\n",
-      "Hello world! I am agent: 200008\n",
-      " my node id is: 4555\n",
-      " my color is: #7000d0\n",
-      "Hello world! I am agent: 100004\n",
-      " my node id is: 3073\n",
-      " my color is: #f080d0\n",
-      "Hello world! I am agent: 200003\n",
-      " my node id is: 13348\n",
-      " my color is: #e0e0b0\n",
-      "Hello world! I am agent: 100002\n",
-      " my node id is: 427\n",
-      " my color is: #300030\n",
-      "Hello world! I am agent: 200006\n",
-      " my node id is: 12114\n",
-      " my color is: #50c060\n",
-      "Hello world! I am agent: 200009\n",
-      " my node id is: 5132\n",
-      " my color is: #d08010\n",
       "Hello world! I am agent: 100001\n",
-      " my node id is: 3784\n",
-      " my color is: #50f010\n",
-      "Hello world! I am agent: 100008\n",
-      " my node id is: 4555\n",
-      " my color is: #00d0f0\n",
-      "Hello world! I am agent: 100003\n",
-      " my node id is: 13348\n",
-      " my color is: #f090a0\n",
-      "Hello world! I am agent: 200000\n",
-      " my node id is: 1723\n",
-      " my color is: #4050b0\n",
-      "Hello world! I am agent: 200005\n",
-      " my node id is: 14631\n",
-      " my color is: #b05020\n",
-      "Hello world! I am agent: 100006\n",
-      " my node id is: 12114\n",
-      " my color is: #b06000\n",
+      " my node id is: 12426\n",
+      " my color is: #50c080\n",
+      "Hello world! I am agent: 300001\n",
+      " my node id is: 12426\n",
+      " my color is: #10a090\n",
+      "Hello world! I am agent: 100000\n",
+      " my node id is: 4901\n",
+      " my color is: #30e040\n",
       "Hello world! I am agent: 200001\n",
-      " my node id is: 3784\n",
-      " my color is: #60f0b0\n",
-      "Hello world! I am agent: 200004\n",
-      " my node id is: 3073\n",
-      " my color is: #d0e0c0\n",
-      "Hello world! I am agent: 200007\n",
-      " my node id is: 11178\n",
-      " my color is: #008020\n",
+      " my node id is: 12426\n",
+      " my color is: #20b000\n",
+      "Hello world! I am agent: 300004\n",
+      " my node id is: 9778\n",
+      " my color is: #70e030\n",
       "Hello world! I am agent: 200002\n",
-      " my node id is: 427\n",
-      " my color is: #d060b0\n",
-      "Hello world! I am agent: 100009\n",
-      " my node id is: 5132\n",
-      " my color is: #900030\n",
+      " my node id is: 11551\n",
+      " my color is: #c0b070\n",
+      "Hello world! I am agent: 200003\n",
+      " my node id is: 11949\n",
+      " my color is: #400040\n",
+      "Hello world! I am agent: 100003\n",
+      " my node id is: 11949\n",
+      " my color is: #f07000\n",
+      "Hello world! I am agent: 300002\n",
+      " my node id is: 11551\n",
+      " my color is: #80a040\n",
+      "Hello world! I am agent: 200000\n",
+      " my node id is: 4901\n",
+      " my color is: #30a080\n",
+      "Hello world! I am agent: 200004\n",
+      " my node id is: 9778\n",
+      " my color is: #b0e0d0\n",
+      "Hello world! I am agent: 300003\n",
+      " my node id is: 11949\n",
+      " my color is: #20c0f0\n",
+      "Hello world! I am agent: 100002\n",
+      " my node id is: 11551\n",
+      " my color is: #408060\n",
+      "Hello world! I am agent: 100004\n",
+      " my node id is: 9778\n",
+      " my color is: #f0c080\n",
+      "Hello world! I am agent: 300000\n",
+      " my node id is: 4901\n",
+      " my color is: #605020\n",
       "   Number of Agents\n",
-      "0                10\n",
-      "1                10\n",
+      "0                 5\n",
+      "1                 5\n",
       "              Agent ID Agent Colour                         family\n",
       "Step AgentID                                                      \n",
-      "0    100000     100000      #c0a0b0  <class 'agents.MinimalAgent'>\n",
-      "     100001     100001      #50f010  <class 'agents.MinimalAgent'>\n",
-      "     100002     100002      #300030  <class 'agents.MinimalAgent'>\n",
-      "     100003     100003      #f090a0  <class 'agents.MinimalAgent'>\n",
-      "     100004     100004      #f080d0  <class 'agents.MinimalAgent'>\n",
-      "     100005     100005      #60e040  <class 'agents.MinimalAgent'>\n",
-      "     100006     100006      #b06000  <class 'agents.MinimalAgent'>\n",
-      "     100007     100007      #e070c0  <class 'agents.MinimalAgent'>\n",
-      "     100008     100008      #00d0f0  <class 'agents.MinimalAgent'>\n",
-      "     100009     100009      #900030  <class 'agents.MinimalAgent'>\n",
-      "     200000     200000      #4050b0     <class 'agents.Buildings'>\n",
-      "     200001     200001      #60f0b0     <class 'agents.Buildings'>\n",
-      "     200002     200002      #d060b0     <class 'agents.Buildings'>\n",
-      "     200003     200003      #e0e0b0     <class 'agents.Buildings'>\n",
-      "     200004     200004      #d0e0c0     <class 'agents.Buildings'>\n",
-      "     200005     200005      #b05020     <class 'agents.Buildings'>\n",
-      "     200006     200006      #50c060     <class 'agents.Buildings'>\n",
-      "     200007     200007      #008020     <class 'agents.Buildings'>\n",
-      "     200008     200008      #7000d0     <class 'agents.Buildings'>\n",
-      "     200009     200009      #d08010     <class 'agents.Buildings'>\n",
-      "1    100000     100000      #c0a0b0  <class 'agents.MinimalAgent'>\n",
-      "     100001     100001      #50f010  <class 'agents.MinimalAgent'>\n",
-      "     100002     100002      #300030  <class 'agents.MinimalAgent'>\n",
-      "     100003     100003      #f090a0  <class 'agents.MinimalAgent'>\n",
-      "     100004     100004      #f080d0  <class 'agents.MinimalAgent'>\n",
-      "     100005     100005      #60e040  <class 'agents.MinimalAgent'>\n",
-      "     100006     100006      #b06000  <class 'agents.MinimalAgent'>\n",
-      "     100007     100007      #e070c0  <class 'agents.MinimalAgent'>\n",
-      "     100008     100008      #00d0f0  <class 'agents.MinimalAgent'>\n",
-      "     100009     100009      #900030  <class 'agents.MinimalAgent'>\n",
-      "     200000     200000      #4050b0     <class 'agents.Buildings'>\n",
-      "     200001     200001      #60f0b0     <class 'agents.Buildings'>\n",
-      "     200002     200002      #d060b0     <class 'agents.Buildings'>\n",
-      "     200003     200003      #e0e0b0     <class 'agents.Buildings'>\n",
-      "     200004     200004      #d0e0c0     <class 'agents.Buildings'>\n",
-      "     200005     200005      #b05020     <class 'agents.Buildings'>\n",
-      "     200006     200006      #50c060     <class 'agents.Buildings'>\n",
-      "     200007     200007      #008020     <class 'agents.Buildings'>\n",
-      "     200008     200008      #7000d0     <class 'agents.Buildings'>\n",
-      "     200009     200009      #d08010     <class 'agents.Buildings'>\n"
+      "0    100000     100000      #30e040  <class 'agents.MinimalAgent'>\n",
+      "     100001     100001      #50c080  <class 'agents.MinimalAgent'>\n",
+      "     100002     100002      #408060  <class 'agents.MinimalAgent'>\n",
+      "     100003     100003      #f07000  <class 'agents.MinimalAgent'>\n",
+      "     100004     100004      #f0c080  <class 'agents.MinimalAgent'>\n",
+      "     200000     200000      #30a080     <class 'agents.Buildings'>\n",
+      "     200001     200001      #20b000     <class 'agents.Buildings'>\n",
+      "     200002     200002      #c0b070     <class 'agents.Buildings'>\n",
+      "     200003     200003      #400040     <class 'agents.Buildings'>\n",
+      "     200004     200004      #b0e0d0     <class 'agents.Buildings'>\n",
+      "     300000     300000      #605020   <class 'agents.MobileAgent'>\n",
+      "     300001     300001      #10a090   <class 'agents.MobileAgent'>\n",
+      "     300002     300002      #80a040   <class 'agents.MobileAgent'>\n",
+      "     300003     300003      #20c0f0   <class 'agents.MobileAgent'>\n",
+      "     300004     300004      #70e030   <class 'agents.MobileAgent'>\n",
+      "1    100000     100000      #30e040  <class 'agents.MinimalAgent'>\n",
+      "     100001     100001      #50c080  <class 'agents.MinimalAgent'>\n",
+      "     100002     100002      #408060  <class 'agents.MinimalAgent'>\n",
+      "     100003     100003      #f07000  <class 'agents.MinimalAgent'>\n",
+      "     100004     100004      #f0c080  <class 'agents.MinimalAgent'>\n",
+      "     200000     200000      #30a080     <class 'agents.Buildings'>\n",
+      "     200001     200001      #20b000     <class 'agents.Buildings'>\n",
+      "     200002     200002      #c0b070     <class 'agents.Buildings'>\n",
+      "     200003     200003      #400040     <class 'agents.Buildings'>\n",
+      "     200004     200004      #b0e0d0     <class 'agents.Buildings'>\n",
+      "     300000     300000      #605020   <class 'agents.MobileAgent'>\n",
+      "     300001     300001      #10a090   <class 'agents.MobileAgent'>\n",
+      "     300002     300002      #80a040   <class 'agents.MobileAgent'>\n",
+      "     300003     300003      #20c0f0   <class 'agents.MobileAgent'>\n",
+      "     300004     300004      #70e030   <class 'agents.MobileAgent'>\n"
      ]
     }
    ],
@@ -276,72 +236,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Hello world! I am agent: 100000\n",
-      " my node id is: 1723\n",
-      " my color is: #c0a0b0\n",
+      " my node id is: 4901\n",
+      " my color is: #30e040\n",
       "Hello world! I am agent: 100001\n",
-      " my node id is: 3784\n",
-      " my color is: #50f010\n",
+      " my node id is: 12426\n",
+      " my color is: #50c080\n",
       "Hello world! I am agent: 100002\n",
-      " my node id is: 427\n",
-      " my color is: #300030\n",
+      " my node id is: 11551\n",
+      " my color is: #408060\n",
       "Hello world! I am agent: 100003\n",
-      " my node id is: 13348\n",
-      " my color is: #f090a0\n",
+      " my node id is: 11949\n",
+      " my color is: #f07000\n",
       "Hello world! I am agent: 100004\n",
-      " my node id is: 3073\n",
-      " my color is: #f080d0\n",
-      "Hello world! I am agent: 100005\n",
-      " my node id is: 14631\n",
-      " my color is: #60e040\n",
-      "Hello world! I am agent: 100006\n",
-      " my node id is: 12114\n",
-      " my color is: #b06000\n",
-      "Hello world! I am agent: 100007\n",
-      " my node id is: 11178\n",
-      " my color is: #e070c0\n",
-      "Hello world! I am agent: 100008\n",
-      " my node id is: 4555\n",
-      " my color is: #00d0f0\n",
-      "Hello world! I am agent: 100009\n",
-      " my node id is: 5132\n",
-      " my color is: #900030\n",
+      " my node id is: 9778\n",
+      " my color is: #f0c080\n",
       "Hello world! I am agent: 200000\n",
-      " my node id is: 1723\n",
-      " my color is: #4050b0\n",
+      " my node id is: 4901\n",
+      " my color is: #30a080\n",
       "Hello world! I am agent: 200001\n",
-      " my node id is: 3784\n",
-      " my color is: #60f0b0\n",
+      " my node id is: 12426\n",
+      " my color is: #20b000\n",
       "Hello world! I am agent: 200002\n",
-      " my node id is: 427\n",
-      " my color is: #d060b0\n",
+      " my node id is: 11551\n",
+      " my color is: #c0b070\n",
       "Hello world! I am agent: 200003\n",
-      " my node id is: 13348\n",
-      " my color is: #e0e0b0\n",
+      " my node id is: 11949\n",
+      " my color is: #400040\n",
       "Hello world! I am agent: 200004\n",
-      " my node id is: 3073\n",
-      " my color is: #d0e0c0\n",
-      "Hello world! I am agent: 200005\n",
-      " my node id is: 14631\n",
-      " my color is: #b05020\n",
-      "Hello world! I am agent: 200006\n",
-      " my node id is: 12114\n",
-      " my color is: #50c060\n",
-      "Hello world! I am agent: 200007\n",
-      " my node id is: 11178\n",
-      " my color is: #008020\n",
-      "Hello world! I am agent: 200008\n",
-      " my node id is: 4555\n",
-      " my color is: #7000d0\n",
-      "Hello world! I am agent: 200009\n",
-      " my node id is: 5132\n",
-      " my color is: #d08010\n"
+      " my node id is: 9778\n",
+      " my color is: #b0e0d0\n",
+      "Hello world! I am agent: 300000\n",
+      " my node id is: 4901\n",
+      " my color is: #605020\n",
+      "Hello world! I am agent: 300001\n",
+      " my node id is: 12426\n",
+      " my color is: #10a090\n",
+      "Hello world! I am agent: 300002\n",
+      " my node id is: 11551\n",
+      " my color is: #80a040\n",
+      "Hello world! I am agent: 300003\n",
+      " my node id is: 11949\n",
+      " my color is: #20c0f0\n",
+      "Hello world! I am agent: 300004\n",
+      " my node id is: 9778\n",
+      " my color is: #70e030\n"
      ]
     }
    ],
@@ -356,8 +301,30 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Create an alternative visualization here using the HoloView library to see the model in real time\n"
+    "Testing the alternative Agent creation functions\n"
    ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "outputs": [],
+   "source": [
+    "alpha = model.create_agents(MinimalAgent)\n",
+    "alpha(100)\n",
+    "alpha(102)\n",
+    "\n",
+    "beta = model.create_agents(MobileAgent)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [],
    "metadata": {
     "collapsed": false
    }
